# qa_guru_python_3_20

./: pyproject.toml
tests/: conftest.py  test_wiki.py
utils/: attach.py
